--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,106 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap');
+
+:root {
+    --header-height:3rem;
+
+    --hue-color: 241; 
+
+    --first-color: hsl(var(--hue-color),69%,61%);
+    --first-color-second: hsl(var(--hue-color),69%,61%);
+    --first-color-alt: hsl(var(--hue-color),57%,53%);
+    --first-color-light: hsl(var(--hue-color),92%,85%);
+    --title-color: hsl(var(--hue-color),8%,15%);
+    --text-color: hsl(var(--hue-color),8%,45%);
+    --text-color-light: hsl(var(--hue-color),8%,65%);
+    --input-color: hsl(var(--hue-color),70%,96%);
+    --body-color: hsl(var(--hue-color),60%,99%);
+    --container-color: #FFF;
+
+    --body-font: 'Open Sans', sans-serif;
+
+
+    /* Sizes */
+
+    --big-font-size:2rem;
+    --h1-font-size:1.5rem;
+    --h2-font-size:1.25rem;
+    --h3-font-size:1.125rem;
+    --norm-font-size:0.938rem;
+    --small-font-size:0.813rem;
+    --tiny-font-size:0.75rem;
+    --header-height:2;
+    
+    --font-medium: 500;
+    --font-semibold:600;
+}
+
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin:0;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body{
+    margin: 0 0 var(--header-height) 0;
+    font-family: var(--body-font);
+    font-size: var(--norm-font-size);
+    background-color: var(--body-color);
+    color:var(--text-color);
+}
+
+h1,h2,h3,h4 {
+    color:var(--title-color);
+    font-weight:var(--font-semibold);
+}
+
+ul{
+    list-style:none;
+}
+
+a{
+    text-decoration: none;
+}
+
+img{
+    max-width: 100%;
+    height:auto;
+}
+
+/* Resuable CSS classes */
+
+.section {
+    padding:2rem 0 4rem;
+}
+
+.section-title {
+    font-size: var(--h1-font-size);
+}
+
+.section-subtitle {
+    display: block;
+    font-size: var(--small-font-size);
+    margin-bottom: 4rem;
+}
+
+.section-title,.section-subtitle {
+    text-align: center;
+}
+
+/* Layout */
+.container {
+    max-width: 768px;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+.grid {
+    display:grid;
+    gap:1.5rem;
+}
 table {
     border-collapse: collapse;
 }
@@ -6,6 +109,7 @@ td {
     width: 30px;
     height: 30px;
     text-align:center;
+    margin-bottom: ;
 }
 
 input[type=text] {
@@ -47,3 +151,4 @@ input[type=text] {
 .solved-div tr:nth-child(3n) td{
     border-bottom:2px solid #999;
 }
+
