--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/main.css') }}">
+    <link rel="stylesheet" href="css/pico.min.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
     <script  src="{{ url_for('static',filename='js/main.js')}}"></script>
-    <title>Document</title>
+    <title>Richard Dimaria</title>
 </head>
+
 <body>
-    <header>Hekkiworld</header>
+    <header>
+        <div class="nav container">
+            <nav>
+                <ul>
+                    <li><a href="home">Home</a></li>
+                    <li><a href="about">About Me</a></li>
+                    <li><a href="portfolio">Portfolio</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <nav>
+        <ul>
+            <li><strong>Richard Dimaria</strong></li>
+        </ul>
+        <ul>
+            <li><a href="#">GitHub</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Instagram</a></li>
+        </ul> 
+    </nav>
+    <h1>Introduction</h1>
+    <p>
+        Hello! My name is Richard Dimaria, I am a passionate software developer dedicated to crafting innocative solutions and pushing the boundaries of technology. 
+        I am currently finishing my degree at the University of Guelph, where I am majoring in Computer Science and minoring in Mathematics.
+
+        In addition to my passion for software development, I find balance and inspiration through various personal pursuits. When I'm not coding, you can often find me immersed in a Roguelike game. Gaming not only serves as a source of entertainment but also enhances my problem-solving skills and fuels my creativity.
+
+        Outside the digital realm, I am an ardent believer in maintaining a healthy body and mind. I prioritize regular workouts and physical activities to stay active and energized. Engaging in fitness routines not only keeps me physically fit but also boosts my productivity and focus, enabling me to tackle complex coding tasks with vigor.
+
+        Moreover, I thrive on exploring new horizons as continuous learning is a fundamental aspect of my journey as a software developer, as it allows me to stay up-to-date with the ever-evolving industry trends and adapt to emerging technologies.
+    </p>
+
+    
+
+
+
     <div>
     <table id="inputTable">
         {% for row in range(9) %}
