--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/main.css') }}">
     <link href="{{url_for('static',filename='css/main.css')}}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+    <link rel="icon" href="/static/images/twenty-sided-dice.ico" type="image/x-icon">
     <script  src="{{ url_for('static',filename='js/main.js')}}"></script>
     <title>Richard Dimaria</title>
 </head>
@@ -15,19 +16,20 @@
 <body>
     <!-- Nothing space at the top -->
     <header class="bg-gray-900 text-white">
-        <div class="container mx-auto py-6 ">
+        <div class="container mx-auto py-10 ">
         </div>
     </header>
 
     <!-- Section contains: Name and clickable links for navigation -->
     <section class="bg-gray-900 text-white">
-        <div class="container mx-auto px-12 ">
+        <div class="container mx-auto px-12 flex">
+            <img class="max-h-7 max-w-7 pr-2" src="/static/images/twenty-sided-dice.ico" alt="Icon">
             <h1 class="font-sans text-xl font-semibold">Richard Dimaria</h1>
         </div>
-        <div class="container mx-auto px-12 py-4 ">
+        <div class="container mx-auto px-12 py-6 ">
           <nav class="flex items-center">
             <ul class="flex space-x-4 underline-offset-8">
-              <li><a href="#" class="text-gray-400 hover:text-white hover:underline decoration-red-500">About Me</a></li>
+              <li><a href="aboutme" class="text-gray-400 hover:text-white hover:underline decoration-red-500">About Me</a></li>
               <li><a href="#" class="text-gray-400 hover:text-white hover:underline decoration-blue-500">Blog</a></li>
               <li><a href="#" class="text-gray-400 hover:text-white hover:underline decoration-green-500">Portfolio</a></li>
               <li><a href="#" class="text-gray-400 hover:text-white hover:underline decoration-pink-500">Contact</a></li>
@@ -42,17 +44,17 @@
         </div>
     </section>
 
-      <section class="bg-gray-100 py-10">
+      <section class="bg-gray-900 py-10 text-white">
         <div class="container mx-auto px-4 flex flex-col md:flex-row">
-          <div class="md:w-1/3">
+          <div class="md:w-1/2 mt-4 md:mt-0 md:pl-8">
+            <p class="text-5xl font-bold">Heya, I'm Richard!</p>
+            <p class="mt-4 text-xl text-gray-300 py-6"> Welcome to my personal website. </p>
+            <p class="mt-4 text-xl text-gray-300"> I'm a software developer in Toronto. I have a degree in Computer Science and currently working on generative AI coding experiments. I like piano, fitness, sci-fi, reading, and gaming. </p>
+          </div>
+          <div class="md:w-1/2 md:p-10">
             <div class="w-48 h-48 mx-auto rounded-full overflow-hidden">
               <img src="/static/images/placeholder.jpeg" alt="Your Picture">
             </div>
-          </div>
-          <div class="md:w-2/3 mt-4 md:mt-0 md:pl-8">
-            <p class="text-xl font-bold">About Me</p>
-            <p class="mt-4 text-gray-800"> Hello! My name is Richard Dimaria, I am a passionate software developer dedicated to crafting innocative solutions and pushing the boundaries of technology. I am currently finishing my degree at the University of Guelph, where I am majoring in Computer Science and minoring in Mathematics. In addition to my passion for software development, I find balance and inspiration through various personal pursuits. When I'm not coding, you can often find me immersed in a Roguelike game. Gaming not only serves as a source of entertainment but also enhances my problem-solving skills and fuels my creativity.Outside the digital realm, I am an ardent believer in maintaining a healthy body and mind. I prioritize regular workouts and physical activities to stay active and energized. Engaging in fitness routines not only keeps me physically fit but also boosts my productivity and focus, enabling me to tackle complex coding tasks with vigor.Moreover, I thrive on exploring new horizons as continuous learning is a fundamental aspect of my journey as a software developer, as it allows me to stay up-to-date with the ever-evolving industry trends and adapt to emerging technologies.
-           </p>
           </div>
         </div>
       </section>
@@ -71,6 +73,8 @@
           <h3 class="text-lg font-semibold">Online Courses</h3>
           <p class="text-gray-700">Various platforms and courses related to software development</p>
           <p class="text-gray-500">Ongoing</p>
+          <p class="mt-4 text-gray-300">I'm a passionate software developer dedicated to crafting innovative solutions and pushing the boundaries of technology. I am currently finishing my degree at the University of Guelph, where I am majoring in Computer Science and minoring in Mathematics. In addition to my passion for software development, I find balance and inspiration through various personal pursuits. When I'm not coding, you can often find me immersed in a Roguelike game. Gaming not only serves as a source of entertainment but also enhances my problem-solving skills and fuels my creativity.Outside the digital realm, I am an ardent believer in maintaining a healthy body and mind. I prioritize regular workouts and physical activities to stay active and energized. Engaging in fitness routines not only keeps me physically fit but also boosts my productivity and focus, enabling me to tackle complex coding tasks with vigor.Moreover, I thrive on exploring new horizons as continuous learning is a fundamental aspect of my journey as a software developer, as it allows me to stay up-to-date with the ever-evolving industry trends and adapt to emerging technologies.
+        </p>
         </div>
         
         <!-- Add more ed
