--- a/templates/index.html
+++ b/templates/index.html
@@ -13,27 +13,27 @@
     <title>Richard Dimaria</title>
 </head>
 
-<body>
+<body class="bg-neutral-900">
     <!-- Nothing space at the top -->
-    <header class="bg-gray-900 text-white">
-        <div class="container mx-auto py-10 ">
+    <header class="bg-neutral-900 text-white">
+        <div class="container mx-auto py-8 ">
         </div>
     </header>
 
     <!-- Section contains: Name and clickable links for navigation -->
-    <section class="bg-gray-900 text-white">
-        <div class="container mx-auto px-12 flex">
+    <section class="bg-neutral-900 text-white px-20">
+        <div class="container mx-auto flex">
             <img class="max-h-7 max-w-7 pr-2" src="/static/images/twenty-sided-dice.ico" alt="Icon">
             <h1 class="font-sans text-xl font-semibold">Richard Dimaria</h1>
         </div>
-        <div class="container mx-auto px-12 py-6 ">
+        <div class="container mx-auto  py-6 ">
           <nav class="flex items-center">
-            <ul class="flex space-x-4 underline-offset-8">
-              <li><a href="aboutme" class="text-gray-400 hover:text-white hover:underline decoration-red-500">About Me</a></li>
-              <li><a href="#" class="text-gray-400 hover:text-white hover:underline decoration-blue-500">Blog</a></li>
-              <li><a href="#" class="text-gray-400 hover:text-white hover:underline decoration-green-500">Portfolio</a></li>
-              <li><a href="#" class="text-gray-400 hover:text-white hover:underline decoration-pink-500">Contact</a></li>
-              <li class="text-gray-400 hover:text-white hover:underline decoration-orange-500"><a href="#">GitHub <i class="fa fa-arrow-up-right-from-square"></i></a></li>
+            <ul class="flex space-x-8 underline-offset-8">
+              <li><a href="aboutme" class="text-gray-400 text-lg hover:text-white hover:underline decoration-red-500">About</a></li>
+              <li><a href="#" class="text-gray-400 text-lg hover:text-white hover:underline decoration-blue-500">Blog</a></li>
+              <li><a href="#" class="text-gray-400 text-lg hover:text-white hover:underline decoration-green-500">Portfolio</a></li>
+              <li><a href="#" class="text-gray-400 text-lg hover:text-white hover:underline decoration-pink-500">Contact</a></li>
+              <li class="text-gray-400 text-lg hover:text-white hover:underline decoration-orange-500"><a href="https://github.com/RitchieDimaria" target="_blank">GitHub <i class="fa fa-arrow-up-right-from-square"></i></a></li>
             </ul>
             <ul class="flex space-x-4 ml-auto">
               <li><a href="#"><i class="fab fa-twitter text-white hover:text-gray-300"></i></a></li>
@@ -44,20 +44,21 @@
         </div>
     </section>
 
-      <section class="bg-gray-900 py-10 text-white">
-        <div class="container mx-auto px-4 flex flex-col md:flex-row">
-          <div class="md:w-1/2 mt-4 md:mt-0 md:pl-8">
-            <p class="text-5xl font-bold">Heya, I'm Richard!</p>
+    <section class="bg-neutral-900 py-10 px-20 text-white">
+    <div class="container mx-auto flex flex-col md:flex-row">
+        <div class="md:w-1/2 mt-4 md:mt-0 md:pl-8">
+            <p class="text-5xl font-bold">Hey, I'm Richard!</p>
             <p class="mt-4 text-xl text-gray-300 py-6"> Welcome to my personal website. </p>
             <p class="mt-4 text-xl text-gray-300"> I'm a software developer in Toronto. I have a degree in Computer Science and currently working on generative AI coding experiments. I like piano, fitness, sci-fi, reading, and gaming. </p>
-          </div>
-          <div class="md:w-1/2 md:p-10">
-            <div class="w-48 h-48 mx-auto rounded-full overflow-hidden">
-              <img src="/static/images/placeholder.jpeg" alt="Your Picture">
-            </div>
-          </div>
         </div>
-      </section>
+        <div class="md:w-1/2 md:p-10">
+        <div class="w-48 h-48 mx-auto rounded-full overflow-hidden">
+            <img src="/static/images/placeholder.jpeg" alt="Your Picture">
+        </div>
+        </div>
+    </div>
+    
+    </section>
 
 
       <section>
