Added education section and new link to the 'this website' page. This page will break down the entire website and how it works

--- a/templates/thiswebsite.html
+++ b/templates/thiswebsite.html
@@ -30,7 +30,7 @@
           <nav class="flex items-center">
             <ul class="flex space-x-8 underline-offset-8">
               <li><a href="aboutme" class="text-gray-400 text-lg hover:text-white hover:underline decoration-red-500">About</a></li>
-              <li><a href="thiswebsite" class="text-gray-400 text-lg hover:text-white hover:underline decoration-blue-500">This Website</a></li>
+              <li><a href="thiswebsite" class=" text-lg text-white underline decoration-blue-500">This Website</a></li>
               <li><a href="#" class="text-gray-400 text-lg hover:text-white hover:underline decoration-green-500">Portfolio</a></li>
               <li><a href="#" class="text-gray-400 text-lg hover:text-white hover:underline decoration-pink-500">Contact</a></li>
               <li class="text-gray-400 text-lg hover:text-white hover:underline decoration-orange-500"><a href="https://github.com/RitchieDimaria" target="_blank">GitHub <i class="fa fa-arrow-up-right-from-square"></i></a></li>
@@ -43,52 +43,4 @@
           </nav>
         </div>
     </section>
-
-    <section class="bg-neutral-900 py-10 px-20 text-white">
-    <div class="container mx-auto flex flex-col md:flex-row">
-        <div class="md:w-1/2 mt-4 md:mt-0 md:pl-8">
-            <p class="text-5xl font-bold">Hey, I'm Richard!</p>
-            <p class="mt-4 text-xl text-gray-300 py-6"> Welcome to my personal website. </p>
-            <p class="mt-4 text-xl text-gray-300"> I'm a software developer in Toronto. I have a degree in Computer Science and currently working on generative AI coding experiments. I like piano, fitness, sci-fi, reading, and gaming. </p>
-        </div>
-        <div class="md:w-1/2 md:p-10">
-        <div class="w-48 h-48 mx-auto rounded-full overflow-hidden">
-            <img src="/static/images/placeholder.jpeg" alt="Your Picture">
-        </div>
-        </div>
-    </div>
-    </section>
-    <footer class="m-12">
-      <p class="text-center  text-gray-300">Designed and Developed by Richard Dimaria</p>
-    </footer >
-        
-        <!-- Add more ed
-      <div class="grid grid-cols-9 gap-1">
-        <div class="bg-gray-100 flex items-center justify-center h-16">1</div>
-        <div class="bg-gray-200 flex items-center justify-center h-16">2</div>
-        <div class="bg-gray-100 flex items-center justify-center h-16">3</div>
-        <div class="bg-gray-200 flex items-center justify-center h-16">4</div>
-        <div class="bg-gray-100 flex items-center justify-center h-16">5</div>
-        <div class="bg-gray-200 flex items-center justify-center h-16">6</div>
-        <div class="bg-gray-100 flex items-center justify-center h-16">7</div>
-        <div class="bg-gray-200 flex items-center justify-center h-16">8</div>
-        <div class="bg-gray-100 flex items-center justify-center h-16">9</div>
-      </div>
-    <div>
-    <table id="inputTable">
-        {% for row in range(9) %}
-            <tr>
-                {% for col in range(9) %}
-                    <td><input type="text" id="cell{{row}}{{col}}" maxlength="1"></td>
-                {% endfor %}
-            </tr>
-        {% endfor %}
-    </table>
-    <button id="solve-btn">Solve!</button>
-    </div>
-    <div>A website by Richard Dimaria </div>
-    <div id="solved-divs">
-        
-    </div>
-</body> --->
 </html>
