--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -26,7 +26,7 @@
       <nav class="flex items-center">
         <ul class="flex space-x-8 underline-offset-8">
           <li><a href="aboutme" class=" text-white text-lg underline decoration-red-500">About</a></li>
-          <li><a href="#" class="text-gray-400 text-lg hover:text-white hover:underline decoration-blue-500">Blog</a></li>
+          <li><a href="thiswebsite" class="text-gray-400 text-lg hover:text-white hover:underline decoration-blue-500">This Website</a></li>
           <li><a href="#" class="text-gray-400 text-lg hover:text-white hover:underline decoration-green-500">Portfolio</a></li>
           <li><a href="#" class="text-gray-400 text-lg hover:text-white hover:underline decoration-pink-500">Contact</a></li>
           <li class="text-gray-400 text-lg hover:text-white hover:underline decoration-orange-500"><a href="https://github.com/RitchieDimaria" target="_blank">GitHub <i class="fa fa-arrow-up-right-from-square"></i></a></li>
@@ -46,8 +46,19 @@
             <p class="text-5xl font-bold py-6">About Me</p>
             <p class="mt-4 text-lg text-gray-300 py-6"> Hey, I'm Richard. I'm a passionate software developer dedicated to crafting innovative solutions and pushing the boundaries of technology. I am currently finishing my degree at the University of Guelph, where I am majoring in Computer Science and minoring in Mathematics. </p>
             <p class="mt-4 text-lg text-gray-300"> In addition to my passion for software development, I find balance and inspiration through various personal pursuits. When I'm not coding, you can often find me immersed in a Roguelike game. Gaming not only serves as a source of entertainment but also enhances my problem-solving skills and fuels my creativity.</p>
-            <p class="mt-4 text-lg text-gray-300 py-6"> Outside the digital realm, I am an ardent believer in maintaining a healthy body and mind. I prioritize regular workouts and physical activities to stay active and energized. Engaging in fitness routines not only keeps me physically fit but also boosts my productivity and focus, enabling me to tackle complex coding tasks with vigor. Moreover, I thrive on exploring new horizons as continuous learning is a fundamental aspect of my journey as a software developer, as it allows me to stay up-to-date with the ever-evolving industry trends and adapt to emerging technologies. </p>
+            <p class="mt-4 text-lg text-gray-300 py-6"> Outside the digital realm, I am an ardent believer in maintaining a healthy body and mind. I prioritize regular workouts and physical activities to stay active and energized. Engaging in fitness routines not only keeps me physically fit but also boosts my productivity and focus, enabling me to tackle complex coding tasks with vigor.</p>
+              <p class="mt-4 text-lg text-gray-300 pb-6">Moreover, I thrive on exploring new horizons as continuous learning is a fundamental aspect of my journey as a software developer, as it allows me to stay up-to-date with the ever-evolving industry trends and adapt to emerging technologies. </p>
+
+            <!--Education section-->
+            <p class="text-3xl font-bold py-2">Education</p>
+            <div class="border-t-2 border-neutral-700"></div>
+            <p class="text-2xl  py-4 text-gray-300">University of Guelph <br>Bachelor of Computing</p>
+            <p class="text-lg text-gray-300">Major in Computer Science; Minor in Mathermatics</p>
+            <p class="text-lg  py-4 text-gray-300">Guelph, ON <br>Expected April 2024</p>
+            <p class="text-xl  py-4 text-gray-300">GPA 3.85</p>
         </div>
+
+
         <div class="md:w-1/3 md:p-10">
             <div class="bg-neutral-800 mt-10 p-4 rounded-lg border border-neutral-700">
                 <h2 class="text-xl font-bold">Me</h2>
@@ -64,7 +75,6 @@
         </div>
         </div>
     </div>
-    
     </section>
 
 </body>
